* Fixed stray soft edge on Boa model
* missile_role had 10% chance of not being set for non-Thargoid ships (random missile
  role was selected instead). This is fixed and changed so that the 10% chance of
  random missile role selection happens only when auto_weapons is set in a ship's
  shipdata.plist entry
* Removed inconsistency in Windows build, where Shift+Q was used as instant quit

-------------------------------------------------------------------------------

Changes between Oolite 1.80 and Oolite 1.82:

General:
========

* More AI improvements and adjustments. Extensive rebalancing of
  combat difficulty for more interesting fights
* Laser damage and heating rates adjusted
* Missile damage adjusted
* Heat cooldown slower
* Installation time now on equipment purchase screen
* OXZ installer now updates dependency check after each install
* Added zooming, scrolling galaxy chart unifying "short range" and "long range"
  options
* Internal damage from missiles now more serious
* Damaged equipment now sorts to the top of the status screen
* Adjustments to acceleration, deceleration and top speed of torus drive
* AI reaction to being attacked by ships they can't scan is more useful
* Removed some differences between NPCs and player ship performance
* Advanced Navigational Array now allows for jumping to the next system on
  a long route without having to retarget
* Stations will warn if player tries to dock without required clearance
* Docking clearance now defaults to 'on' for new games (no effect on
  existing games)
* Keyboard settings can be viewed from game options
* Scrape damage now does not automatically mine asteroids
* Extra detail graphics mode now has more detailed planet textures
* Field of View added as a game option
* Windows port: Improved multi-monitor support
* Windows port: Added support for grabbing mouse inside the game window when
  mouse control is active
* Windows and Linux ports: V-Sync can now be controlled via user preferences
